build/log/idf_py_stdout_output_20848
Command: ninja all
[1/11] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D I:\esp32\ghost\firmware_gateway\build\bootloader\esp-idf\esptool_py && C:\Users\Luis\.espressif\python_env\idf5.5_py3.13_env\Scripts\python.exe I:/esp32/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 I:/esp32/ghost/firmware_gateway/build/bootloader/bootloader.bin"
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Users\Luis\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -II:/esp32/ghost/firmware_gateway/build/config -II:/esp32/ghost/firmware_gateway/main/includes -II:/esp32/v5.5.1/esp-idf/components/newlib/platform_include -II:/esp32/v5.5.1/esp-idf/components/freertos/config/include -II:/esp32/v5.5.1/esp-idf/components/freertos/config/include/freertos -II:/esp32/v5.5.1/esp-idf/components/freertos/config/xtensa/include -II:/esp32/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -II:/esp32/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -II:/esp32/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -II:/esp32/v5.5.1/esp-idf/components/freertos/esp_additions/include -II:/esp32/v5.5.1/esp-idf/components/esp_hw_support/include -II:/esp32/v5.5.1/esp-idf/components/esp_hw_support/include/soc -II:/esp32/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32s3 -II:/esp32/v5.5.1/esp-idf/components/esp_hw_support/dma/include -II:/esp32/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -II:/esp32/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -II:/esp32/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -II:/esp32/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -II:/esp32/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -II:/esp32/v5.5.1/esp-idf/components/esp_hw_support/port/esp32s3/. -II:/esp32/v5.5.1/esp-idf/components/esp_hw_support/port/esp32s3/include -II:/esp32/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -II:/esp32/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -II:/esp32/v5.5.1/esp-idf/components/heap/include -II:/esp32/v5.5.1/esp-idf/components/heap/tlsf -II:/esp32/v5.5.1/esp-idf/components/log/include -II:/esp32/v5.5.1/esp-idf/components/soc/include -II:/esp32/v5.5.1/esp-idf/components/soc/esp32s3 -II:/esp32/v5.5.1/esp-idf/components/soc/esp32s3/include -II:/esp32/v5.5.1/esp-idf/components/soc/esp32s3/register -II:/esp32/v5.5.1/esp-idf/components/hal/platform_port/include -II:/esp32/v5.5.1/esp-idf/components/hal/esp32s3/include -II:/esp32/v5.5.1/esp-idf/components/hal/include -II:/esp32/v5.5.1/esp-idf/components/esp_rom/include -II:/esp32/v5.5.1/esp-idf/components/esp_rom/esp32s3/include -II:/esp32/v5.5.1/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -II:/esp32/v5.5.1/esp-idf/components/esp_rom/esp32s3 -II:/esp32/v5.5.1/esp-idf/components/esp_common/include -II:/esp32/v5.5.1/esp-idf/components/esp_system/include -II:/esp32/v5.5.1/esp-idf/components/esp_system/port/soc -II:/esp32/v5.5.1/esp-idf/components/esp_system/port/include/private -II:/esp32/v5.5.1/esp-idf/components/xtensa/esp32s3/include -II:/esp32/v5.5.1/esp-idf/components/xtensa/include -II:/esp32/v5.5.1/esp-idf/components/xtensa/deprecated_include -II:/esp32/v5.5.1/esp-idf/components/lwip/include -II:/esp32/v5.5.1/esp-idf/components/lwip/include/apps -II:/esp32/v5.5.1/esp-idf/components/lwip/include/apps/sntp -II:/esp32/v5.5.1/esp-idf/components/lwip/lwip/src/include -II:/esp32/v5.5.1/esp-idf/components/lwip/port/include -II:/esp32/v5.5.1/esp-idf/components/lwip/port/freertos/include -II:/esp32/v5.5.1/esp-idf/components/lwip/port/esp32xx/include -II:/esp32/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/arch -II:/esp32/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/sys -II:/esp32/ghost/firmware_gateway/components/controller/include -II:/esp32/ghost/firmware_gateway/components/comm/include -II:/esp32/v5.5.1/esp-idf/components/esp_wifi/include -II:/esp32/v5.5.1/esp-idf/components/esp_wifi/include/local -II:/esp32/v5.5.1/esp-idf/components/esp_wifi/wifi_apps/include -II:/esp32/v5.5.1/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -II:/esp32/v5.5.1/esp-idf/components/esp_event/include -II:/esp32/v5.5.1/esp-idf/components/esp_phy/include -II:/esp32/v5.5.1/esp-idf/components/esp_phy/esp32s3/include -II:/esp32/v5.5.1/esp-idf/components/esp_netif/include -II:/esp32/v5.5.1/esp-idf/components/nvs_flash/include -II:/esp32/v5.5.1/esp-idf/components/esp_partition/include -II:/esp32/v5.5.1/esp-idf/components/json/cJSON -II:/esp32/ghost/firmware_gateway/components/ui/include -II:/esp32/v5.5.1/esp-idf/components/esp_driver_gpio/include -II:/esp32/ghost/firmware_gateway/managed_components/espressif__button/include -II:/esp32/ghost/firmware_gateway/managed_components/espressif__button/interface -II:/esp32/v5.5.1/esp-idf/components/esp_adc/include -II:/esp32/v5.5.1/esp-idf/components/esp_adc/interface -II:/esp32/v5.5.1/esp-idf/components/esp_adc/esp32s3/include -II:/esp32/v5.5.1/esp-idf/components/esp_adc/deprecated/include -II:/esp32/ghost/firmware_gateway/components/wifi_manager/include -II:/esp32/ghost/firmware_gateway/components/supabase_client/include -II:/esp32/v5.5.1/esp-idf/components/esp-tls -II:/esp32/v5.5.1/esp-idf/components/esp-tls/esp-tls-crypto -II:/esp32/v5.5.1/esp-idf/components/mbedtls/port/include -II:/esp32/v5.5.1/esp-idf/components/mbedtls/mbedtls/include -II:/esp32/v5.5.1/esp-idf/components/mbedtls/mbedtls/library -II:/esp32/v5.5.1/esp-idf/components/mbedtls/esp_crt_bundle/include -II:/esp32/v5.5.1/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -II:/esp32/v5.5.1/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -II:/esp32/v5.5.1/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=I:/esp32/ghost/firmware_gateway=. -fmacro-prefix-map=I:/esp32/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -DBUTTON_VER_MAJOR=4 -DBUTTON_VER_MINOR=1 -DBUTTON_VER_PATCH=5 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c I:/esp32/ghost/firmware_gateway/main/main.c
I:/esp32/ghost/firmware_gateway/main/main.c: In function 'on_wifi_state_change':
I:/esp32/ghost/firmware_gateway/main/main.c:113:35: error: passing argument 1 of 'supabase_send_event' from incompatible pointer type [-Wincompatible-pointer-types]
  113 |         ret = supabase_send_event("TEST", "{\"message\": \"Hello from Ghost Gateway!\"}");
      |                                   ^~~~~~
      |                                   |
      |                                   char *
In file included from I:/esp32/ghost/firmware_gateway/main/main.c:25:
I:/esp32/ghost/firmware_gateway/components/supabase_client/include/supabase_client.h:62:53: note: expected 'const device_event_t *' but argument is of type 'char *'
   62 | esp_err_t supabase_send_event(const device_event_t *event);
      |                               ~~~~~~~~~~~~~~~~~~~~~~^~~~~
I:/esp32/ghost/firmware_gateway/main/main.c:113:15: error: too many arguments to function 'supabase_send_event'
  113 |         ret = supabase_send_event("TEST", "{\"message\": \"Hello from Ghost Gateway!\"}");
      |               ^~~~~~~~~~~~~~~~~~~
I:/esp32/ghost/firmware_gateway/components/supabase_client/include/supabase_client.h:62:11: note: declared here
   62 | esp_err_t supabase_send_event(const device_event_t *event);
      |           ^~~~~~~~~~~~~~~~~~~
[5/11] Building C object esp-idf/supabase_client/CMakeFiles/__idf_supabase_client.dir/src/supabase_client.c.obj
ninja: build stopped: subcommand failed.
